# adk-agent

./: .gitignore  .last_session  AGENT_INTEGRATION_NOTES.md  MOBILE_APP_INTEGRATION_GUIDE.md  README.md  TESTING.md  TRUCK_SHARING_AGENT_README.md  VERTEX_AI_REDEPLOYMENT_NOTES.md  VERTEX_AI_SDK_DETAILS.md  chat_client.py  check_operations.py  check_vertex_api.py  commands.md  create_sample_booking.py  deploy_truck_sharing.py  deploy_with_timeout.py  interactive_booking_test.py  list_agents.sh  list_all_sessions.py  list_deployment_details.py  list_sessions.sh  pyproject.toml  remote_agent_discovery_and_testing.md  remote_agent_discovery_and_testing.py  remote_agent_discovery_and_testing.sh  requirements.txt  simple_test_cli.py  test_agent_api.py  test_agent_cli.py  test_agents.py  test_command.py  test_customer_service.py  test_live_booking.py  test_local.py  test_reasoning_engine.py  test_truck_sharing_agent.py  test_weather_agent.py  test_weather_tool.py  test_weather_wttr.py  test_with_cli.py  (+3 more)
.venv-py312/: pyvenv.cfg
customer_service/: agent.py  config.py  prompts.py  sample_dialogues.md  test_customer_firestore.py  test_firestore_agent.py  test_firestore_direct.py  test_firestore_live.py  test_truck_conversation.py  test_truck_firestore.py
deployment/: customer_service_local.py  customer_service_remote.py  truck_sharing_remote.py  weather_local.py  weather_remote.py
venv-py312/: pyvenv.cfg
weather_agent/: __init__.py  agent.py  prompt.py
web_app/: README.md  agent_api.py  agent_discovery_api.py  agent_test.py  api_test.py  app.py  demo_chat.py  direct_chat.py  (+6 more)
(+32 files in other folders)
