[project]
name = "adk-agents"
version = "0.1.0"
description = "ADK agents built with Google's Agent Development Kit"
authors = [
    {name = "Brandon Hancock", email = "brandon@brandonhancock.io"},
    {name = "Eugene Goldberg", email = "eugene.goldberg@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = "Apache License 2.0"
packages = [
    {include = "adk_short_bot"},
    {include = "weather_agent"},
    {include = "deployment"}
]

[tool.poetry.dependencies]
python = ">=3.12"
requests = "^2.31.0"
google-adk = "^0.1.0"
pydantic = "^2.11.3"
python-dotenv = "^1.1.0"
google-cloud-aiplatform = {extras = ["adk", "agent_engines"], version = "^1.42.1"}
absl-py = "^2.1.0"
cloudpickle = "^3.0.0"

[tool.poetry.scripts]
# Short Bot scripts
adk-short-bot = "adk_short_bot:app"
deploy-short-local = "deployment.local:main"
deploy-short-remote = "deployment.remote:main"

# Weather agent scripts
deploy-weather-local = "deployment.weather_local:main"
deploy-weather-remote = "deployment.weather_remote:main"

# Shared scripts
cleanup = "deployment.cleanup:cleanup_deployment"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"